# binary_viewer

./: .gitignore  .vcpkg_requirements.txt  CMakeLists.txt  LICENSE  README  README.md  bayer.cpp  bayer.h  bin_viewer.pro  bin_viewer.qrc  binary_viewer.cpp  binary_viewer.h  build_setup.sh  dot_plot.cpp  dot_plot.h  graph_view.cpp  graph_view.h  hilbert.cpp  hilbert.h  hilbert.py  histogram.cpp  histogram.h  histogram_2d_view.cpp  histogram_2d_view.h  histogram_3d_view.cpp  histogram_3d_view.h  histogram_calc.cpp  histogram_calc.h  image_view.cpp  image_view.h  image_view2.cpp  image_view2.h  image_view3.cpp  image_view3.h  main.cpp  main_app.cpp  main_app.h  overall_view.cpp  overall_view.h  plot_view.cpp  (+5 more)
